# pypsa-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  architecture.excalidraw  codecov.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/actions/build-package/: action.yaml
.github/workflows/: codeql.yml  push-image.yaml  release-docker.yaml  release-pypi.yaml  test.yaml
compose/: .env.example  .env.local  compose.dev.yaml  compose.full.yaml  compose.minimal.yaml  compose.services.yaml  compose.yaml
compose/postgres-init/: 01-create-prefect-db.sql
desktop/: .gitignore  about.go  app.go  before_close_other.go  before_close_windows.go  config.go  go.mod  go.sum  main.go  notify_other.go  notify_windows.go  paths.go  prereqs.go  process.go  proxy.go  setup.go  systray_other.go  systray_windows.go  terminate_other.go  terminate_windows.go  versions.yaml  wails.json
desktop/frontend/: index.html  pnpm-lock.yaml
desktop/frontend/src/: App.svelte  style.css
desktop/frontend/wailsjs/go/main/: App.d.ts  App.js
docs/: configuration.md  desktop-build-and-distribute.md  desktop-distribution.md  macos-intel-build-notes.md
frontend/app/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/app/src/: app.css
frontend/app/src/lib/: table-url-state.ts  types.ts  utils.js  utils.ts
frontend/app/src/lib/api/: client.js  client.ts  schema.ts
frontend/app/src/lib/components/: AppSidebar.svelte  DarkModeToggle.svelte  DataTable.svelte  DateTime.svelte  FilterBar.svelte  LockedContentPreview.svelte  Navbar.svelte  NotFound.svelte  Pagination.svelte
frontend/app/src/lib/filters/: ast.ts  dsl.ts  legacy.ts
frontend/app/src/lib/reports/: filterHelpers.ts  overview.yaml
frontend/app/src/lib/server/: auth.js
frontend/app/src/lib/stores/: auth.svelte.js  auth.svelte.ts  breadcrumb.svelte.ts  features.svelte.ts  networkPageStore.js  networkPageStore.ts  reportStore.svelte.ts  sidebar.svelte.ts
frontend/app/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/app/src/routes/admin/: +layout.svelte  +page.svelte
frontend/app/src/routes/database/: +page.svelte
frontend/app/src/routes/login/: +page.server.js  +page.svelte  login-form.svelte
frontend/app/src/routes/network/: +page.server.js  +page.svelte
frontend/app/src/routes/networks/: +page.svelte
frontend/app/src/routes/pending-approval/: +page.server.js  +page.svelte
frontend/app/src/routes/runs/: +page.svelte
frontend/map/: package-lock.json
frontend/map/src/: App.jsx
scripts/: generate_settings_docs.py
src/pypsa_app/: __init__.py  cli.py  worker.py
src/pypsa_app/backend/: cache.py  database.py  flows.py  main.py  models.py  permissions.py  ratelimit.py  settings.py  spa_static_files.py  task_queue.py  tasks.py
src/pypsa_app/backend/alembic/: __init__.py  env.py
src/pypsa_app/backend/alembic/versions/: 0001_initial_schema.py  0003_add_saved_views.py  (+5 more)
src/pypsa_app/backend/api/: deps.py  pagination.py
src/pypsa_app/backend/auth/: authenticate.py  password.py  providers.py  session.py
src/pypsa_app/backend/filters/: __init__.py  sqla.py
src/pypsa_app/backend/schemas/: __init__.py  analysis.py  api_key.py  auth.py  cache.py  common.py  components.py  data.py  network.py  plot.py  public.py  run.py  statistics.py  stats.py  task.py  version.py  views.py
src/pypsa_app/backend/services/: analysis.py  explore.py  network.py  run.py  statistics.py  sync.py
src/pypsa_app/backend/utils/: allowlists.py  carrier_colors.py  serializers.py  validation.py
src/pypsa_app/llm/: client.py  events.py  service.py  settings.py
src/pypsa_app/llm/tools/: __init__.py  get_network_statistics.py
tests/: conftest.py  test_auth_password.py  test_migrations.py  test_rate_limit.py  test_run_migrations.py
tests/data/records/ac_dc_meshed/: components.parquet  manifest.json  scenarios.parquet  snapshots.parquet
(+228 files in other folders)
