[project]
name = "pypsa-app"
description = "tbd"
dynamic = ["version"]
authors = [
    { name = "Lukas Trippe", email = "lkstrp@pm.me" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
keywords = ["pypsa", "energy", "power-systems", "visualization"]

dependencies = [
    "fastapi>=0.137.2",
    "starlette>=1.3.1,<2",
    "uvicorn[standard]>=0.49.0",
    "pydantic[email]>=2.13.4,<3",
    "pydantic-settings>=2.14.2,<3",
    "sqlalchemy>=2.0.51,<3",
    "pypsa>=1.2.3,<2",
    "pandas>=3.0,<4",
    "click>=8.4.1",
    "authlib>=1.7.2,<2",
    "itsdangerous>=2.2",
    "httpx>=0.28,<1",
    "python-multipart>=0.0.32",
    "alembic>=1.18",
    "jinja2>=3.1,<4",
    "markupsafe>=3.0,<4",
    "platformdirs>=4.10.0",
    "slowapi>=0.1.10,<0.2",
]

[project.optional-dependencies]
full = [
    "psycopg2-binary>=2.9",
    "redis>=6.4,<7",
    "celery[redis]>=5.6,<6",
]

dev = [
    "pytest>=9.1.1,<10",
    "pytest-asyncio>=1.4.0,<2",
    "pytest-alembic>=0.12,<0.13",
    "pytest-cov>=7.0,<8",
    "coverage>=7.14.1,<8",
    "pre-commit>=4.6.0",
]

[project.scripts]
pypsa-app = "pypsa_app.cli:main"

[project.urls]
Homepage = "https://app.pypsa.org"
Documentation = "https://github.com/PyPSA/pypsa-app/blob/main/README.md"
Repository = "https://github.com/PyPSA/pypsa-app"
Issues = "https://github.com/PyPSA/pypsa-app/issues"

[build-system]
requires = ["setuptools>=82.0.1", "setuptools_scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pypsa_app.backend" = ["static/**/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.uv]
exclude-newer = "7 days"

[tool.check-wheel-contents]
# Alembic migrations are loaded by file path, not imported
ignore = "W004"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["pypsa_app"]
omit = ["tests/*", "src/pypsa_app/backend/alembic/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    'F',        # pyflakes
    'E',        # pycodestyle: Error
    'W',        # pycodestyle: Warning
    'I',        # isort
    'UP',       # pyupgrade
    'PL',       # pylint
    'PERF',     # perflint
    'ANN',      # flake8-annotations
    'ASYNC',    # flake8-async
    'TID',      # flake8-tidy-imports
    'S',        # flake8-bandit
    'B',        # flake8-bugbear
    'C4',       # flake8-comprehensions
    'EM',       # flake8-errmsg
    'G',        # flake8-logging-format
    'PIE',      # flake8-pie
    'T20',      # flake8-print
    'PYI',      # flake8-pyi
    'PT',       # flake8-pytest-style
    'SIM',      # flake8-simplify
    'TC',       # flake8-type-checking
    'PTH',      # flake8-use-pathlib
    'RUF013',   # ruff
    'ERA',      # eradicate
    'TRY',      # tryceratops
]

ignore = [
    'ANN401',   # Dynamically typed expressions are forbidden
    'B008',     # function call in default argument value
]

[tool.ruff.lint.per-file-ignores]
"src/pypsa_app/backend/alembic/**" = ["ALL"]
"{test,tests,examples,doc,docs}/**" = [
    'ERA',      # eradicate
    'S',        # flake8-bandit
    'B',        # flake8-bugbear
    'EM',       # flake8-errmsg
    'T20',      # flake8-print
    'SIM',      # flake8-simplify
    'ARG',      # flake8-unused-arguments
    'PL',       # pylint
    'TRY',      # tryceratops
    'ANN',      # flake8-annotations
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
